@@ -46,6 +46,10 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     testImplementation 'com.redis.testcontainers:testcontainers-redis-junit:1.6.4'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 ext {
@@ -53,11 +57,15 @@ ext {
     applicationName = 'onsquad'
 }
 
+String ENABLE_PREVIEW = "--enable-preview"
+String PARAMETERS = "-parameters"
+
 def gradleProfile = project.hasProperty("profile") ?
         project.property("profile").toString() : "test"
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs(ENABLE_PREVIEW)
     systemProperty("spring.profiles.active", gradleProfile)
     outputs.dir snippetsDir
 }
@@ -98,5 +106,6 @@ jar {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add("-parameters")
+    options.compilerArgs.add(ENABLE_PREVIEW)
+    options.compilerArgs.add(PARAMETERS)
 }
